--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   "author": "Tarun Singh, Sourabh Malewade, Hrithik Gavankar",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.24.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.14"
   },
   "devDependencies": {
