--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "open health chatting project",
   "main": "index.js",
   "scripts": {
+    "start": "node server.js",
     "dev": "nodemon server.js",
-    "start:dev": "export NODE_ENV=dev && npm run dev"
+    "start:dev": "export NODE_ENV=dev && npm run dev",
+    "start:prod": "export NODE_ENV=prod && npm run start"
   },
   "keywords": [
     "node",
